plugins {
	id "java"
	id "idea"
	id "application"
	id "jacoco"
	id "io.freefair.lombok" version "8.14.4"
	id "org.danilopianini.git-sensitive-semantic-versioning-gradle-plugin" version "4.0.2"
	id "com.diffplug.spotless" version "7.2.1"
	id "signing"
	id "org.danilopianini.publish-on-central" version "9.2.2"
}

group "com.autonomouslogic.commons"


java {
	withJavadocJar()
	withSourcesJar()
	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

repositories {
	mavenCentral()
}

dependencies {
	implementation "com.google.guava:guava:33.6.0-jre"
	//implementation "com.diffplug.durian:durian:3.4.0"

	compileOnly "io.reactivex.rxjava3:rxjava:3.1.12"

	testImplementation "org.mockito:mockito-core:5.23.0"
	testImplementation "org.junit.jupiter:junit-jupiter-api:5.14.4"
	testImplementation "org.junit.jupiter:junit-jupiter-params:5.14.4"
	testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.14.4"
	testImplementation "commons-io:commons-io:2.22.0"
	testImplementation "io.reactivex.rxjava3:rxjava:3.1.12"
	testImplementation "org.junit-pioneer:junit-pioneer:2.3.0"
}

test {
	useJUnitPlatform()

	jvmArgs = [
		"--add-opens", "java.base/java.lang=ALL-UNNAMED",
		"--add-opens", "java.base/java.util=ALL-UNNAMED"
	]

	testLogging {
		events = [ "FAILED", "PASSED", "SKIPPED" ]
		showExceptions = true
		exceptionFormat = "FULL"
		showExceptions = true
		showCauses = true
		showStackTraces = true
	}
}

jacocoTestReport {
	executionData(test)
	reports {
		xml.required = true
		html.required = true
	}
}

spotless {
	java {
		palantirJavaFormat()
		leadingSpacesToTabs()
	}

	groovyGradle {
		leadingSpacesToTabs()
	}
}

javadoc {
	options {
		addBooleanOption "Xdoclint:all,-html,-missing", true
	}
}

publishOnCentral {
	repoOwner = "autonomouslogic"
	projectDescription = "Commons Java functions."
	projectLongName = "Commons Java"
	projectUrl = "https://github.com/autonomouslogic/commons-java"
	licenseName = "MIT-0"
	licenseUrl = "https://spdx.org/licenses/MIT-0.html"
}

publishing {
	publications {
		mavenJava(MavenPublication) {
			from(components.java)
		}
	}
}

publishing.publications.withType(MavenPublication).configureEach {
	pom {
		developers {
			developer {
				id = "kennethjor"
				name = "Kenneth Jorgensen"
				email = "kenneth@autonomouslogic.com"
				url = "https://kennethjorgensen.com/"
			}
		}
	}
}

signing {
	sign publishing.publications.mavenJava
}
